Used url in place of local images

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
         Campus Ambassador |<br />Member at ACM-VIT| Competitive Programmer |
         Android & IOT Developer
       </p>
-      <img class="Coder" src="images/Coder.png" alt="coder-img" />
+      <img class="Coder" src="https://firebasestorage.googleapis.com/v0/b/test-1ba66.appspot.com/o/Coder.png?alt=media&token=35de1c16-3368-4d28-8350-129b07d7799e" alt="coder-img" />
     </div>
 
     <div class="middle-container" id="AboutMe">
       <div class="profile" >
         <img 
           class="profilePic"
-          src="images/Ayush.png"
+          src="https://firebasestorage.googleapis.com/v0/b/test-1ba66.appspot.com/o/Ayush.png?alt=media&token=d2f5624a-1598-4fbe-9ccc-d34de7c29314"
           alt="Ayush-profile-img"
         />
         <h2>Hello.</h2>
@@ -81,7 +81,7 @@
           </p>
         </div>
         <div class="skill-row">
-          <img class="android-img" src="images/android.png" alt="android-img" />
+          <img class="android-img" src="https://firebasestorage.googleapis.com/v0/b/test-1ba66.appspot.com/o/android.png?alt=media&token=a458f30c-f505-4d40-8388-614abfdb594c" alt="android-img" />
 
           <h3>Android Development</h3>
           <p>
@@ -91,7 +91,7 @@
           </p>
         </div>
         <div class="skill-row">
-          <img class="iot-img" src="images/iot.jpg" alt="iot-img" />
+          <img class="iot-img" src="https://firebasestorage.googleapis.com/v0/b/test-1ba66.appspot.com/o/iot.jpg?alt=media&token=2b9829d3-ec99-4d83-84f4-a21da84190e2" alt="iot-img" />
 
           <h3>IoT Development</h3>
           <p>
@@ -109,7 +109,7 @@
         <div class="skill-row">
           <img
             class="ckhabri-img"
-            src="images/collegeKhabri.jpg"
+            src="https://firebasestorage.googleapis.com/v0/b/test-1ba66.appspot.com/o/collegeKhabri.jpg?alt=media&token=5e1e568f-bc7a-4899-8462-ab442278f50b"
             alt="code-img"
           />
 
@@ -120,7 +120,7 @@
           </ul>
         </div>
         <div class="skill-row">
-          <img class="android-img" src="images/hackerEarth.jpg" alt="android-img" />
+          <img class="android-img" src="https://firebasestorage.googleapis.com/v0/b/test-1ba66.appspot.com/o/hackerEarth.jpg?alt=media&token=88acdfeb-eb21-48d3-9a57-6426d16c109c" alt="android-img" />
 
           <h3>HackerEarth Campus Ambassador, VIT, Vellore</h3>
           <ul>
@@ -130,7 +130,7 @@
           </ul>
         </div>
         <div class="skill-row">
-          <img class="iot-img" src="images/acm.png" alt="iot-img" />
+          <img class="iot-img" src="https://firebasestorage.googleapis.com/v0/b/test-1ba66.appspot.com/o/acm.png?alt=media&token=3693d12b-024c-40d2-a826-91dedfe1850c" alt="iot-img" />
 
           <h3>Core Member, Competitive Department, ACM-VIT Student's Chapter.</h3>
           <ul>
@@ -148,7 +148,7 @@
         <div class="skill-row">
           <img
             class="ckhabri-img"
-            src="images/sprinkler.png"
+            src="https://firebasestorage.googleapis.com/v0/b/test-1ba66.appspot.com/o/sprinkler.png?alt=media&token=ec62fe47-3974-494a-8c23-c2e91bf9dfe3"
             alt="code-img"
           />
 
@@ -159,7 +159,7 @@
           </ul>
         </div>
         <div class="skill-row">
-          <img class="android-img" src="images/robo.PNG" alt="android-img" />
+          <img class="android-img" src="https://firebasestorage.googleapis.com/v0/b/test-1ba66.appspot.com/o/robo.PNG?alt=media&token=71ece999-51b1-4bd8-9565-691aaa7c63ab" alt="android-img" />
 
           <a href="https://github.com/lukefire5156/COVID19-KIT"><h3>SMART HEALTHCARE SYSTEM</h3></a>
           <ul>
@@ -168,7 +168,7 @@
           </ul>
         </div>
         <div class="skill-row">
-          <img class="iot-img" src="images/education.png" alt="iot-img" />
+          <img class="iot-img" src="https://firebasestorage.googleapis.com/v0/b/test-1ba66.appspot.com/o/education.png?alt=media&token=ac23284e-8b04-45ae-a763-010cda9e04a1" alt="iot-img" />
 
           <a href="https://github.com/lukefire5156/REMOTE-EDUCATION-APP---EMAGISTER"><h3>REMOTE EDUCATION APP – EMAGISTER</h3></a>
           <ul>
@@ -177,7 +177,7 @@
           </ul>
         </div>
         <div class="skill-row">
-          <img class="android-img" src="images/secure.png" alt="iot-img" />
+          <img class="android-img" src="https://firebasestorage.googleapis.com/v0/b/test-1ba66.appspot.com/o/secure.png?alt=media&token=65d85738-27f5-47c5-be47-7dccc6235406" alt="iot-img" />
 
           <a href="https://github.com/lukefire5156/Steganography-App"><h3>STEGANOGRAPHY APP</h3></a>
           <ul>
