--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="top-container">
       <h1>I'm Ayush.</h1>
       <p style="color: green">
-        Upcoming Intern at JPMorgan Chase & Co. | 5★ CodeChef | Hackerearth
+        Ex-Intern at JPMorgan Chase & Co. | 5★ CodeChef | Hackerearth
         Campus Ambassador |<br />Member at ACM-VIT| Competitive Programmer |
         Android & IOT Developer
       </p>
@@ -53,11 +53,7 @@
           obsessed with the conception of using technology to solve practical
           problems. I believe in the power of programming to transform and
           change the lives of people around the world. I dote to explore new
-          trends in the software industry. Currently, I work as HackerEarth
-          Campus Ambassador in VIT, Vellore. I organize coding competitions on
-          the HackerEarth platform for which I create a fun set of fascinating
-          programming questions which include the concept of data structures and
-          algorithms.
+          trends in the software industry.
         </p>
       </div>
       <hr  id="Skills">
@@ -107,8 +103,17 @@
       <div class="skills">
         <h2>My Experience</h2>
         <div class="skill-row">
+          <img class="iot-img" src="https://mms.businesswire.com/media/20210627005052/en/239674/23/jpm_chase_logo_final%5B2%5D.jpg" alt="iot-img" />
+
+          <h3>JPMORGAN CHASE | Software Engineering Summer Intern 2021.</h3>
+          <ul>
+            <li>Part of Digital Payments team in Consumer and Community Banking</li>
+            <li>Worked on balance transferfeature of chase app.</li>
+          </ul>
+        </div>
+        <div class="skill-row">
           <img
-            class="ckhabri-img"
+            class="android-img"
             src="https://firebasestorage.googleapis.com/v0/b/test-1ba66.appspot.com/o/collegeKhabri.jpg?alt=media&token=5e1e568f-bc7a-4899-8462-ab442278f50b"
             alt="code-img"
           />
@@ -120,7 +125,7 @@
           </ul>
         </div>
         <div class="skill-row">
-          <img class="android-img" src="https://firebasestorage.googleapis.com/v0/b/test-1ba66.appspot.com/o/hackerEarth.jpg?alt=media&token=88acdfeb-eb21-48d3-9a57-6426d16c109c" alt="android-img" />
+          <img class="iot-img" src="https://firebasestorage.googleapis.com/v0/b/test-1ba66.appspot.com/o/hackerEarth.jpg?alt=media&token=88acdfeb-eb21-48d3-9a57-6426d16c109c" alt="android-img" />
 
           <h3>HackerEarth Campus Ambassador, VIT, Vellore</h3>
           <ul>
@@ -130,7 +135,7 @@
           </ul>
         </div>
         <div class="skill-row">
-          <img class="iot-img" src="https://firebasestorage.googleapis.com/v0/b/test-1ba66.appspot.com/o/acm.png?alt=media&token=3693d12b-024c-40d2-a826-91dedfe1850c" alt="iot-img" />
+          <img class="android-img" src="https://firebasestorage.googleapis.com/v0/b/test-1ba66.appspot.com/o/acm.png?alt=media&token=3693d12b-024c-40d2-a826-91dedfe1850c" alt="iot-img" />
 
           <h3>Core Member, Competitive Department, ACM-VIT Student's Chapter.</h3>
           <ul>
